# MediLect

./: README.md  pyproject.toml  requirements.txt
config/: settings.py
docs/: CODE_REFERENCE.md
src/medilect/: cli.py
src/medilect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/medilect/config/: settings.py
src/medilect/postprocessing/: base.py  deid.py
src/medilect/preprocessing/: __init__.py  layout.py  rotation.py  splitting.py
src/medilect/transcription/: docTR.py  mineru.py  paddle_vl.py
src/medilect/utils/: debug_logger.py
src/packagename/: datamodels.py
src/packagename/postprocessing/: deid.py
src/packagename/preprocessing/: base.py  layout.py  rotation.py  splitting.py
src/packagename/transcription/: __init__.py  base.py  mineru.py  paddle_vl.py
src/packagename/utils/: data_loader.py  image.py
tests/: test_deid.py  test_macro_boxing.py  test_preprocessors.py  test_transcription.py
